# flask-starter

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
migrations/versions/: 0f2974f0ff0d_initial_migration.py
project/: __init__.py  config.py  extensions.py  models.py
project/core/: views.py
project/templates/: base.html
project/templates/core/: index.html
